2010-11-15  Rik  <octave@nomad.inbox5.com>

	* plot/saveas.m: Add function name to error messages.  Use semicolons
	to prevent unnecessary output.  Use common terms 'ext' for extension
	and 'filename' for filename in docstring.

2010-11-15  Kai Habel  <kai.habel@gmx.de>

	* plot/saveas.m: New file.
	* plot/module.mk: Add saveas.m
	* plot/__print_parse_opts__.m: Parse arguments correctly when first
	argument is a figure handle.
	* plot/print.m: Add saveas to seealso entry.

2010-11-14  Michael Goffioul  <michael.goffioul@gmail.com>

	* plot/print.m: Use "del" instead of "delete" in DOS shell, and
	replace	forward slashes with backslashes.
	* plot/__gnuplot_print__.m: Likewise.

2010-11-14  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/__all_opts__.m: Ensure that the array is always
	case-insensitively sorted.

2010-11-13  John W. Eaton  <jwe@octave.org>

	* plot/gnuplot_drawnow.m (have_non_legend_axes): New function.
	Use it to avoid errors if there are no axes.
	* plot/legend.m: Avoid indexing beyond end of varargin array.

2010-11-10  John W. Eaton  <jwe@octave.org>

	* gethelp.cc: Eliminate special case for __DECCXX.

2010-11-10  John W. Eaton  <jwe@octave.org>

	* scripts/deprecated/dispatch.m: Don't set warning state in tests.

2010-11-10  John W. Eaton  <jwe@octave.org>

	* deprecated/dispatch.m: Deprecate dispatch function.
	* deprecated/module.mk (deprecated_FCN_FILES): Add it to the list.

2010-11-09  John W. Eaton  <jwe@octave.org>

	* help/help.m: Call missing_function_hook with output argument
	and print message here.
	* miscellaneous/unimplemented.m: Return message if nargout > 0.
	Fixes bug #31597.

2010-11-08  Ben Abbott  <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Check for z/y/zdata before converting
	negative values to NaNs. Bug fix for changeset 11201.
	* plot/daspect.m: Fix demo using both daspect and pbaspect.

2010-11-08  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m: Remove foreground color earlier.