@@ -189,7 +189,6 @@ function list = missing_functions ()
   "gallery", 
   "gammaincinv", 
   "gco", 
-  "getappdata", 
   "getframe", 
   "getpixelposition", 
   "getpref", 
@@ -233,7 +232,6 @@ function list = missing_functions ()
   "instrfind", 
   "instrfindall", 
   "interpstreamspeed", 
-  "isappdata", 
   "iscom", 
   "isinterface", 
   "isjava", 
@@ -343,17 +341,14 @@ function list = missing_functions ()
   "resample", 
   "reset", 
   "rgbplot", 
-  "rmappdata", 
   "rmpref", 
   "root", 
   "rotate", 
   "rotate3d", 
   "rsf2csf", 
-  "saveas", 
   "selectmoveresize", 
   "sendmail", 
   "serial", 
-  "setappdata", 
   "setpixelposition", 
   "setpref", 
   "showplottool", 
@@ -395,7 +390,6 @@ function list = missing_functions ()
   "uigetfile", 
   "uigetpref", 
   "uiimport", 
-  "uimenu", 
   "uiopen", 
   "uipanel", 
   "uipushtool", 
